--- a/seogram/seo/templates/seo/index.html
+++ b/seogram/seo/templates/seo/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -10,7 +11,7 @@
 
   <title>SeoGram - SEO Agency Template</title>
 
-  <link rel="stylesheet" href="../assets/css/maicons.css">
+  <link rel="stylesheet" href="{% static '/assets/css/maicons.css' %}">
 
   <link rel="stylesheet" href="../assets/css/bootstrap.css">
 
